Bug 30128: fix gpg_wrapper args order for git >= 2.21

--- a/rbm.conf
+++ b/rbm.conf
@@ -365,10 +365,13 @@ gpg_wrapper: |
       END;
   -%]
   # git >= 2.10.0-rc0 is calling gpg with 5 args. See #20757
+  # git >= 2.21 changed args order. See #30128
   if ( [ $# -eq 4 ] && [ "$1" = '--status-fd=1' ] \
       && [ "$2" = '--verify' ] ) \
       || ( [ $# -eq 5 ] && [ "$1" = '--status-fd=1' ] \
-           && [ "$2" = '--keyid-format=long' ] && [ "$3" = '--verify' ] )
+           && [ "$2" = '--keyid-format=long' ] && [ "$3" = '--verify' ] ) \
+      || ( [ $# -eq 5 ] && [ "$2" = '--status-fd=1' ] \
+           && [ "$1" = '--keyid-format=long' ] && [ "$3" = '--verify' ] ) \
   then
         [% c('gpg_bin') %] [% c('gpg_args') %] --with-fingerprint [% gpg_kr %] "$@" | sed 's/^\[GNUPG:\] EXPKEYSIG /\[GNUPG:\] GOODSIG /'
         exit ${PIPESTATUS[0]}
