--- a/projects/firefox/config
+++ b/projects/firefox/config
@@ -148,6 +148,9 @@ input_files:
   - project: clang
     name: clang
     enable: '[% c("var/linux") %]'
+  - project: yasm
+    name: yasm
+    enable: '[% c("var/linux") %]'
   - project: fxc2
     name: fxc2
     enable: '[% c("var/windows") %]'
