--- a/projects/tor-launcher/config
+++ b/projects/tor-launcher/config
@@ -1,9 +1,9 @@
 # vim: filetype=yaml sw=2
 version: 0.2.21.3
-git_url: https://git.torproject.org/tor-launcher.git
-git_hash: '[% c("version") %]'
+git_url: https://github.com/acatarineu/tor-launcher.git
+git_hash: '33533'
 gpg_keyring: torbutton.gpg
-tag_gpg_id: 1
+tag_gpg_id: 0
 filename: "[% project %]-[% c('version') %]-[% c('var/build_id') %].tar.gz"
 var:
   container:
