--- a/projects/clang/build
+++ b/projects/clang/build
@@ -14,7 +14,7 @@ export PATH="/var/tmp/dist/cmake/bin:$PATH"
 mkdir -p /var/tmp/build
 cd /var/tmp/build
 tar -xf $rootdir/[% c('input_files_by_name/llvm') %]
-tar -xf $rootdir/[% c('input_files_by_name/cfe') %]
+tar -xf $rootdir/[% c('input_files_by_name/clang') %]
 tar -xf $rootdir/[% c('input_files_by_name/libcxx') %]
 tar -xf $rootdir/[% c('input_files_by_name/libcxxabi') %]
 tar -xf $rootdir/[% c('input_files_by_name/lld') %]
@@ -22,20 +22,12 @@ tar -xf $rootdir/[% c('input_files_by_name/compiler-rt') %]
 mv llvm-* llvm
 # LLVM has reproducibility issues when optimizing bitcode, which we need to
 # patch. See: #32053 for more details.
-patch -p1 < $rootdir/42574.patch
 patch -p1 < $rootdir/43909.patch
-mv cfe-* llvm/tools/clang
+mv clang-* llvm/tools/clang
 mv libcxx-* llvm/projects/libcxx
 mv libcxxabi-* llvm/projects/libcxxabi
 mv lld-* llvm/tools/lld
 mv compiler-rt-* llvm/projects/compiler-rt
-[% IF c("var/windows") -%]
-  # Patch order is important here
-  for i in {1..12}
-    do git apply $rootdir/win-patches/llvm-objcopy-$i.patch
-  done
-  patch -p1 -d llvm/tools/lld < $rootdir/timestamp.patch
-[% END %]
 cd llvm
 export LLVM_HOME=$(pwd)
 mkdir build
