--- a/projects/firefox/config
+++ b/projects/firefox/config
@@ -1,9 +1,9 @@
 # vim: filetype=yaml sw=2
 version: '[% c("abbrev") %]'
 filename: 'firefox-[% c("version") %]-[% c("var/osname") %]-[% c("var/build_id") %]'
-git_hash: 'tor-browser-[% c("var/firefox_version") %]-[% c("var/torbrowser_branch") %]-1-build1'
-tag_gpg_id: 1
-git_url: https://git.torproject.org/tor-browser.git
+git_hash: 'd1120b4a7ae995654bdad2d6f747f0633a049dc3'
+tag_gpg_id: 0
+git_url: https://github.com/acatarineu/tor-browser.git
 git_submodule: 1
 gpg_keyring: torbutton.gpg
 
